--- a/configs/tencent_sunny2heavy.yml
+++ b/configs/tencent_sunny2heavy.yml
@@ -44,8 +44,8 @@ data:
   data_root: /network_space/storage43/zhaozijing/datasets
   train:
     name: CocoDataset
-    img_path: tencent/day_heavy_rain
-    ann_path: tencent/day_heavy_rain/annotations/train_coco_style.json
+    img_path: tencent/day_sunny
+    ann_path: tencent/day_sunny/annotations/train_coco_style.json
     tgt_img_path: tencent/day_heavy_rain
     tgt_ann_path: tencent/day_heavy_rain/annotations/train_coco_style.json
     input_size: [448,256] #[w,h]
@@ -73,7 +73,7 @@ data:
 threshold: 0.3
 ema_alpha: 0.9996
 device:
-  gpu_ids: [1,2]
+  gpu_ids: [0, 1]
   workers_per_gpu: 8
   batchsize_per_gpu: 24
 schedule:
@@ -93,7 +93,7 @@ schedule:
     name: MultiStepLR
     milestones: [130,160,175]
     gamma: 0.1
-  val_intervals: 10
+  val_intervals: 1
 evaluator:
   name: CocoDetectionEvaluator
   save_key: mAP
