--- a/configs/tencent_camera_a.yml
+++ b/configs/tencent_camera_a.yml
@@ -1,5 +1,6 @@
 
-save_dir: outputs/tencent_sunny2overcast
+save_dir: outputs/tencent_camera_a
+mode: source_only
 model:
   arch:
     name: OneStageDetector
@@ -40,14 +41,11 @@ model:
           name: GIoULoss
           loss_weight: 2.0
 data:
-  # data_root: /scratch/generalvision/zhaozijing/data
   data_root: /network_space/storage43/zhaozijing/datasets
   train:
     name: CocoDataset
-    img_path: tencent/day_sunny
-    ann_path: tencent/day_sunny/annotations/train_coco_style.json
-    tgt_img_path: tencent/day_overcast
-    tgt_ann_path: tencent/day_overcast/annotations/train_coco_style.json
+    img_path: tencent/camera_a
+    ann_path: tencent/camera_a/annotations/train_coco_style.json
     input_size: [448,256] #[w,h]
     keep_ratio: True
     pipeline:
@@ -64,24 +62,21 @@ data:
       normalize: [[103.53, 116.28, 123.675], [57.375, 57.12, 58.395]]
   val:
     name: CocoDataset
-    img_path: tencent/day_overcast
-    ann_path: tencent/day_overcast/annotations/val_coco_style.json
+    img_path: tencent/camera_a
+    ann_path: tencent/camera_a/annotations/val_coco_style.json
     input_size: [448,256] #[w,h]
     keep_ratio: True
     pipeline:
       normalize: [[103.53, 116.28, 123.675], [57.375, 57.12, 58.395]]
-threshold: 0.4
-ema_alpha: 0.9996
 device:
-  gpu_ids: [1,2]
+  gpu_ids: [0,1]
   workers_per_gpu: 8
   batchsize_per_gpu: 24
 schedule:
-  # load_model: ./checkpoints/nanodet_m_0.5x.ckpt
-  load_model: ./checkpoints/tencent_day_sunny_source.ckpt
+  load_model: ./checkpoints/nanodet_m_0.5x.ckpt
   optimizer:
     name: SGD
-    lr: 0.03 # lr: 0.07
+    lr: 0.05 # lr: 0.07
     momentum: 0.9
     weight_decay: 0.0001
   warmup:
@@ -93,7 +88,7 @@ schedule:
     name: MultiStepLR
     milestones: [130,160,175]
     gamma: 0.1
-  val_intervals: 10
+  val_intervals: 5
 evaluator:
   name: CocoDetectionEvaluator
   save_key: mAP
