Fix bugs and add adversarial training stage.

--- a/configs/camera_a2b/teaching.yml
+++ b/configs/camera_a2b/teaching.yml
@@ -1,6 +1,6 @@
 
-save_dir: outputs/tencent_camera_a
-mode: source_only
+save_dir: outputs/camera_a2b/teaching
+mode: teaching
 model:
   arch:
     name: OneStageDetector
@@ -16,6 +16,7 @@ model:
       start_level: 0
       num_outs: 3
     head:
+      enable: True
       name: NanoDetHead
       num_classes: 4
       input_channel: 96
@@ -41,11 +42,14 @@ model:
           name: GIoULoss
           loss_weight: 2.0
 data:
+  # data_root: /scratch/generalvision/zhaozijing/data
   data_root: /network_space/storage43/zhaozijing/datasets
   train:
     name: CocoDataset
     img_path: tencent/camera_a
     ann_path: tencent/camera_a/annotations/train_coco_style.json
+    tgt_img_path: tencent/camera_b
+    tgt_ann_path: tencent/camera_b/annotations/train_coco_style.json
     input_size: [448,256] #[w,h]
     keep_ratio: True
     pipeline:
@@ -62,36 +66,43 @@ data:
       normalize: [[103.53, 116.28, 123.675], [57.375, 57.12, 58.395]]
   val:
     name: CocoDataset
-    img_path: tencent/camera_a
-    ann_path: tencent/camera_a/annotations/val_coco_style.json
+    img_path: tencent/camera_b
+    ann_path: tencent/camera_b/annotations/val_coco_style.json
     input_size: [448,256] #[w,h]
     keep_ratio: True
     pipeline:
       normalize: [[103.53, 116.28, 123.675], [57.375, 57.12, 58.395]]
+tgt_loss_scale: 0.5
+threshold:
+  start_value: 0.4
+  max_value: 0.4
+  min_value: 0.4
+  gamma: 0.9
+ema_alpha: 0.9996
 device:
-  gpu_ids: [0,1]
+  gpu_ids: [0, 1]
   workers_per_gpu: 8
   batchsize_per_gpu: 24
 schedule:
-  load_model: ./checkpoints/nanodet_m_0.5x.ckpt
+  load_model: ./checkpoints/camera_a2b/adversarial.ckpt
   optimizer:
     name: SGD
-    lr: 0.05 # lr: 0.07
+    lr: 0.02
     momentum: 0.9
     weight_decay: 0.0001
   warmup:
     name: linear
     steps: 1000
     ratio: 0.00001
-  total_epochs: 200
+  total_epochs: 100
   lr_schedule:
     name: MultiStepLR
-    milestones: [130,160,175]
+    milestones: [50, 90]
     gamma: 0.1
   val_intervals: 5
 evaluator:
   name: CocoDetectionEvaluator
-  save_key: mAP
+  save_key: AP_50
 
 log:
   interval: 50
